autogenerate java play server
