# java-play-framework-server/app/controllers/TransformerApiControllerImp.java
@@ -1,5 +1,6 @@
 package controllers;
 
+import apimodels.ErrorMsg;
 import apimodels.GeneInfo;
 import apimodels.TransformerInfo;
 import apimodels.TransformerQuery;
@@ -10,7 +11,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.io.FileInputStream;
 import javax.validation.constraints.*;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2019-09-10T18:40:05.544Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2019-11-12T23:40:58.720Z")
 
 public class TransformerApiControllerImp implements TransformerApiControllerImpInterface {
     @Override
