# java-play-framework-server/public/swagger.json
@@ -2,7 +2,7 @@
   "swagger" : "2.0",
   "info" : {
     "description" : "API for remove-gene-by-attribute filter.",
-    "version" : "1.2.0",
+    "version" : "1.3.0",
     "title" : "API for remove-gene-by-attribute filter"
   },
   "host" : "sharpener.ncats.io",
@@ -46,6 +46,18 @@
               "items" : {
                 "$ref" : "#/definitions/gene_info"
               }
+            }
+          },
+          "400" : {
+            "description" : "bad request",
+            "schema" : {
+              "$ref" : "#/definitions/error_msg"
+            }
+          },
+          "500" : {
+            "description" : "internal server error",
+            "schema" : {
+              "$ref" : "#/definitions/error_msg"
             }
           }
         },
@@ -92,6 +104,10 @@
           "items" : {
             "$ref" : "#/definitions/attribute"
           }
+        },
+        "source" : {
+          "type" : "string",
+          "description" : "Name of a transformer that added gene to the gene list."
         }
       },
       "example" : {
@@ -105,33 +121,44 @@
         "attributes" : [ {
           "name" : "name",
           "source" : "source",
-          "value" : "value"
+          "value" : "value",
+          "url" : "url"
         }, {
           "name" : "name",
           "source" : "source",
-          "value" : "value"
+          "value" : "value",
+          "url" : "url"
         } ],
+        "source" : "source",
         "gene_id" : "gene_id"
       }
     },
     "attribute" : {
       "type" : "object",
-      "required" : [ "name", "value" ],
+      "required" : [ "name", "source", "value" ],
       "properties" : {
         "name" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Name of the attribute."
         },
         "value" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Value of the attribute."
         },
         "source" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Transformer that produced the attribute's value."
+        },
+        "url" : {
+          "type" : "string",
+          "description" : "URL for additional information."
         }
       },
       "example" : {
         "name" : "name",
         "source" : "source",
-        "value" : "value"
+        "value" : "value",
+        "url" : "url"
       }
     },
     "property" : {
@@ -154,6 +181,14 @@
           "type" : "string",
           "description" : "Name of the transformer."
         },
+        "label" : {
+          "type" : "string",
+          "description" : "Short label for GUI display."
+        },
+        "version" : {
+          "type" : "string",
+          "description" : "Transformer's version."
+        },
         "function" : {
           "type" : "string",
           "description" : "Function of the transformer, one of 'producer', 'expander', 'filter'.",
@@ -162,6 +197,9 @@
         "description" : {
           "type" : "string",
           "description" : "Description of the transformer."
+        },
+        "properties" : {
+          "$ref" : "#/definitions/transformer_info_properties"
         },
         "parameters" : {
           "type" : "array",
@@ -184,21 +222,33 @@
         "function" : "producer",
         "name" : "name",
         "description" : "description",
+        "label" : "label",
+        "version" : "version",
         "parameters" : [ {
           "allowed_values" : [ "allowed_values", "allowed_values" ],
+          "biolink_class" : "biolink_class",
           "default" : "default",
+          "allowed_range" : [ 0.80082819046101150206595775671303272247314453125, 0.80082819046101150206595775671303272247314453125 ],
           "name" : "name",
           "suggested_values" : "suggested_values",
           "lookup_url" : "lookup_url",
           "type" : "Boolean"
         }, {
           "allowed_values" : [ "allowed_values", "allowed_values" ],
+          "biolink_class" : "biolink_class",
           "default" : "default",
+          "allowed_range" : [ 0.80082819046101150206595775671303272247314453125, 0.80082819046101150206595775671303272247314453125 ],
           "name" : "name",
           "suggested_values" : "suggested_values",
           "lookup_url" : "lookup_url",
           "type" : "Boolean"
-        } ]
+        } ],
+        "properties" : {
+          "list_predicate" : "list_predicate",
+          "method" : "method",
+          "member_predicate" : "member_predicate",
+          "source_url" : "source_url"
+        }
       }
     },
     "parameter" : {
@@ -218,12 +268,25 @@
           "type" : "string",
           "description" : "Default value of the parameter."
         },
+        "biolink_class" : {
+          "type" : "string",
+          "description" : "Biolink class of the paramater. Applicable to producers only and only one parameter can have a biolink class."
+        },
         "allowed_values" : {
           "type" : "array",
           "description" : "Allowed values for the parameter.",
           "items" : {
             "type" : "string"
           }
+        },
+        "allowed_range" : {
+          "type" : "array",
+          "description" : "Allowed range for values of the parameter.",
+          "items" : {
+            "type" : "number"
+          },
+          "maxItems" : 2,
+          "minItems" : 2
         },
         "suggested_values" : {
           "type" : "string",
@@ -236,14 +299,34 @@
       },
       "example" : {
         "allowed_values" : [ "allowed_values", "allowed_values" ],
+        "biolink_class" : "biolink_class",
         "default" : "default",
+        "allowed_range" : [ 0.80082819046101150206595775671303272247314453125, 0.80082819046101150206595775671303272247314453125 ],
         "name" : "name",
         "suggested_values" : "suggested_values",
         "lookup_url" : "lookup_url",
         "type" : "Boolean"
       }
     },
+    "error_msg" : {
+      "type" : "object",
+      "properties" : {
+        "status" : {
+          "type" : "integer"
+        },
+        "title" : {
+          "type" : "string"
+        },
+        "detail" : {
+          "type" : "string"
+        },
+        "type" : {
+          "type" : "string"
+        }
+      }
+    },
     "gene_info_identifiers" : {
+      "type" : "object",
       "properties" : {
         "entrez" : {
           "type" : "string",
@@ -280,6 +363,34 @@
         "ensembl" : [ "ENSEMBL:ENSG00000196839", "ENSEMBL:ENSG00000196839" ],
         "hgnc" : "HGNC:186",
         "mygene_info" : "100"
+      }
+    },
+    "transformer_info_properties" : {
+      "type" : "object",
+      "properties" : {
+        "list_predicate" : {
+          "type" : "string",
+          "description" : "BioLink-model predicate describing relationship between input and output gene lists."
+        },
+        "member_predicate" : {
+          "type" : "string",
+          "description" : "BioLink-model predicate describing relationship between input and output genes."
+        },
+        "source_url" : {
+          "type" : "string",
+          "description" : "URL for underlying data or a wrapped service."
+        },
+        "method" : {
+          "type" : "string",
+          "description" : "A method used to generate output gene lists."
+        }
+      },
+      "description" : "Additional metadata for the transformer.",
+      "example" : {
+        "list_predicate" : "list_predicate",
+        "method" : "method",
+        "member_predicate" : "member_predicate",
+        "source_url" : "source_url"
       }
     }
   }
